Feat/finalize buying (#29)
* add bucket preview

* add finalize

* finalize buying

* new verisions
